:hammer: fix responsive mobile and add truncatext function to overview data

--- a/src/components/UI/Button.scss
+++ b/src/components/UI/Button.scss
@@ -142,30 +142,7 @@
 
 
   @media only screen and (min-width: 280px) and (max-width: 500px) {
-    &--view {
-      background-color: #d85b53;
-      width: 110px;
-      height: 20px;
-      font-size: 8px;
-      color: #fff;
-      margin-top: 10px;
-
-    &:focus {
-      width: 175px;
-      background-color: rgba(216, 91, 83, 0.7);
-    }
-
-    &:hover {
-      color: white;
-
-      box-shadow: 6px 0px 0px rgb(255, 255, 255, 0.2);
-    }
-
-    &:active {
-      color: black;
-      fill: black;
-    }
-    }
+    
     &--remove {
       width: 110px;
       height: auto;
@@ -243,13 +220,14 @@
 
     &--view {
       background-color: #d85b53;
-      width: 120px;
-      height: 20px;
+      width: auto;
+      height: 25px;
       font-size: 10px;
       background-color: rgba(216, 91, 83, 0.9);
       border: 0;
       color: #fff;
       margin-right: 15px;
+      margin-top: 10px;
   
       &:focus {
         width: 175px;
